--- a/index.html
+++ b/index.html
@@ -7,11 +7,27 @@
 
     <!-- collegamento al CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Simon Says</title>
 
   </head>
   <body>
-
+    <div class="container">
+      <div class="header">
+        <span class="left">Simon Says</span>
+        <span class="right"><button id="start-button">AVVIA</button></span>
+      </div>
+      <div id="content" class="content">
+        
+      </div>
+      <div class="footer">
+        <div class="left">
+        Check my Git-Hub: <a href="https://github.com/antoinde">antoinde</a>
+        </div>
+        <div class="right">
+          &copy; Antonello Indelicato 
+        </div>
+      </div>
+    </div>
   </body>
 
   <!-- collegamento a JavaScript -->
